--- a/Deal/pom.xml
+++ b/Deal/pom.xml
@@ -62,6 +62,11 @@
             <version>4.1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.27.0</version>
+        </dependency>
 
     </dependencies>
 
