--- a/Deal/pom.xml
+++ b/Deal/pom.xml
@@ -68,6 +68,16 @@
             <version>4.27.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-docker-compose</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
