--- a/Deal/src/main/resources/application.yml
+++ b/Deal/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
         ddl-auto: validate
     liquibase:
       enabled: true
-      change-log: classpath:/db/changelog/db.changelog-master.xml
+      change-log: classpath:/db/changelog/db.changelog-master.yaml
   cloud:
     openfeign:
       client:
