--- a/Deal/src/main/resources/application.yml
+++ b/Deal/src/main/resources/application.yml
@@ -18,10 +18,8 @@ spring:
         config:
           calculator:
             url: http://localhost:8088/calculator
-  jackson:
-    serialization:
-      fail-on-empty-beans: false
-    default-property-inclusion: non_null
+  kafka:
+    bootstrap-servers: localhost:9092
 server:
   port: 8089
 logging:
