--- a/Dossier/pom.xml
+++ b/Dossier/pom.xml
@@ -16,6 +16,9 @@
 
     <properties>
         <java.version>21</java.version>
+        <maven-compiler.version>3.8.1</maven-compiler.version>
+        <itextpdf.version>5.5.13.3</itextpdf.version>
+        <pdfbox.version>3.0.0</pdfbox.version>
     </properties>
 
     <dependencies>
@@ -32,7 +35,20 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
+            <version>${spring-kafka.version}</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.itextpdf</groupId>-->
+<!--            <artifactId>itextpdf</artifactId>-->
+<!--            <version>${itextpdf.version}</version>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>org.apache.pdfbox</groupId>-->
+<!--            <artifactId>pdfbox</artifactId>-->
+<!--            <version>${pdfbox.version}</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.kafka</groupId>
@@ -76,7 +92,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>${maven-compiler.version}</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
