--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -1,7 +1,23 @@
 spring:
+#  main:
+#    web-application-type: reactive
   application:
     name: Gateway
   cloud:
+    gateway:
+      routes:
+        - id: deal-service
+          uri: http://localhost:8089
+          predicates:
+            - Path=/deal/**
+          filters:
+            - StripPrefix=1
+        - id: statement-service
+          uri: http://localhost:8090
+          predicates:
+            - Path=/statement/**
+          filters:
+            - StripPrefix=1
     openfeign:
       client:
         config:
@@ -11,7 +27,6 @@ spring:
             url: http://localhost:8090/statement
 server:
   port: 8087
-
 logging:
   level:
     root: INFO
