--- a/Deal/src/main/resources/application.yml
+++ b/Deal/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: Deal
   datasource:
-    url: jdbc:postgresql://localhost:5432/calculator_db
+    url: jdbc:postgresql://postgres:5432/calculator_db
     username: admin
     password: pass
     driverClassName: org.postgresql.Driver
@@ -17,11 +17,11 @@ spring:
       client:
         config:
           calculator:
-            url: http://localhost:8088/calculator
+            url: http://calculator-service:8080/calculator
   kafka:
     bootstrap-servers: localhost:9092
 server:
-  port: 8089
+  port: 8081
 logging:
   level:
     root: INFO
