--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,3 +26,97 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+
+  postgres:
+    image: postgres:15
+    container_name: postgres
+    environment:
+      POSTGRES_DB: calculator_db
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: pass
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - app-network
+
+  calculator-service:
+    build: ./Calculator
+    image: calculator-service
+    container_name: calculator-service
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/calculator_db
+      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_PASSWORD: pass
+    depends_on:
+      - postgres
+    networks:
+      - app-network
+
+  deal-service:
+    build: ./Deal
+    image: deal-service
+    container_name: deal-service
+    ports:
+      - "8081:8081"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/calculator_db
+      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_PASSWORD: pass
+    depends_on:
+      - postgres
+    networks:
+      - app-network
+
+  dossier-service:
+    build: ./Dossier
+    image: dossier
+    container_name: dossier-service
+    ports:
+      - "8082:8082"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/calculator_db
+      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_PASSWORD: pass
+    depends_on:
+      - postgres
+    networks:
+      - app-network
+
+  gateway-service:
+    build: ./Gateway
+    image: gateway
+    container_name: gateway-service
+    ports:
+      - "8083:8083"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/calculator_db
+      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_PASSWORD: pass
+    depends_on:
+      - postgres
+    networks:
+      - app-network
+
+  statement-service:
+    build: ./Statement
+    image: statement
+    container_name: statement-service
+    ports:
+      - "8084:8084"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/calculator_db
+      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_PASSWORD: pass
+    depends_on:
+      - postgres
+    networks:
+      - app-network
+volumes:
+  postgres-data:
+
+networks:
+  app-network:
