--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -1,19 +1,17 @@
 spring:
-#  main:
-#    web-application-type: reactive
   application:
     name: Gateway
   cloud:
     gateway:
       routes:
         - id: deal-service
-          uri: http://localhost:8089
+          uri: http://deal-service:8081
           predicates:
             - Path=/deal/**
           filters:
             - StripPrefix=0
         - id: statement-service
-          uri: http://localhost:8090
+          uri: http://statement-service:8084
           predicates:
             - Path=/statement/**
           filters:
@@ -22,11 +20,11 @@ spring:
       client:
         config:
           deal:
-            url: http://localhost:8089/deal
+            url: http://deal-service:8081/deal
           statement:
-            url: http://localhost:8090/statement
+            url: http://statement-service:8084/statement
 server:
-  port: 8087
+  port: 8083
 logging:
   level:
     root: INFO
