--- a/Statement/src/main/resources/application.yml
+++ b/Statement/src/main/resources/application.yml
@@ -6,13 +6,13 @@ spring:
       client:
         config:
           deal:
-            url: http://localhost:8089/deal
+            url: http://deal-service:8081/deal
   jackson:
     serialization:
       fail-on-empty-beans: false
     default-property-inclusion: non_null
 server:
-  port: 8090
+  port: 8084
 
 logging:
   level:
