--- a/Gateway/Dockerfile
+++ b/Gateway/Dockerfile
@@ -1,17 +1,20 @@
 FROM maven:3.9.4-eclipse-temurin-21 AS build
 
 WORKDIR /app
-
 COPY ./pom.xml ./pom.xml
-COPY ./src ./src
+
+WORKDIR /app/Gateway
+
+COPY ./Gateway/pom.xml ./pom.xml
+COPY ./Gateway/src ./src
 
 RUN mvn clean install
 
 FROM eclipse-temurin:21-jre AS runtime
 
-WORKDIR /app
+WORKDIR /app/Gateway
 
-COPY --from=build /app/target/Gateway-0.0.1-SNAPSHOT.jar Gateway.jar
+COPY --from=build /app/Gateway/target/Gateway-0.0.1-SNAPSHOT.jar Gateway.jar
 
 EXPOSE 8083
 
