--- a/Deal/Dockerfile
+++ b/Deal/Dockerfile
@@ -1,17 +1,20 @@
 FROM maven:3.9.4-eclipse-temurin-21 AS build
 
 WORKDIR /app
-
 COPY ./pom.xml ./pom.xml
-COPY ./src ./src
+
+WORKDIR /app/Deal
+
+COPY ./Deal/pom.xml ./pom.xml
+COPY ./Deal/src ./src
 
 RUN mvn clean install
 
 FROM eclipse-temurin:21-jre AS runtime
 
-WORKDIR /app
+WORKDIR /app/Deal
 
-COPY --from=build /app/target/Deal-0.0.1-SNAPSHOT.jar Deal.jar
+COPY --from=build /app/Deal/target/Deal-0.0.1-SNAPSHOT.jar Deal.jar
 
 EXPOSE 8081
 
