--- a/Gateway/pom.xml
+++ b/Gateway/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>CreditBank</groupId>
 		<artifactId>CreditBank</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>..</relativePath>
 	</parent>
 	<groupId>CreditBank</groupId>
 	<artifactId>Gateway</artifactId>
