--- a/Dossier/src/main/resources/application.yml
+++ b/Dossier/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: YOUR-EMAIL
-    password: pass
+    username: YouMail
+    password: Pass
     properties:
       mail.smtp:
         auth: true
