--- a/Dossier/src/main/resources/application.yml
+++ b/Dossier/src/main/resources/application.yml
@@ -4,14 +4,14 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: YouMail
-    password: Pass
+    username: ${MY_EMAIL}
+    password: ${MY_PASSWORD}
     properties:
       mail.smtp:
         auth: true
         starttls.enable: true
   kafka:
-      bootstrap-servers: broker:9092
+      bootstrap-servers: ${BROKER_HOST:localhost}:9092
   cloud:
     openfeign:
       client:
