--- a/Gateway/src/main/resources/application.yml
+++ b/Gateway/src/main/resources/application.yml
@@ -7,11 +7,11 @@ spring:
         default-to-properties: true
         config:
           deal:
-            url: http://deal-service:8081/deal
+            url: http://deal:9001/deal
           statement:
-            url: http://statement-service:8084/statement
+            url: http://statement:9002/statement
 server:
-  port: 8083
+  port: 8087
 
 logging:
   level:
