--- a/Calculator/Dockerfile
+++ b/Calculator/Dockerfile
@@ -1,9 +1,9 @@
 FROM maven:3.9.4-eclipse-temurin-21 AS build
 
-WORKDIR /app
+WORKDIR /CreditBank
 COPY ./pom.xml ./pom.xml
 
-WORKDIR /app/Calculator
+WORKDIR /CreditBank/Calculator
 
 COPY ./Calculator/pom.xml ./pom.xml
 COPY ./Calculator/src ./src
@@ -12,9 +12,9 @@ RUN mvn clean install
 
 FROM eclipse-temurin:21-jre AS runtime
 
-WORKDIR /app/Calculator
+WORKDIR /CreditBank/Calculator
 
-COPY --from=build /app/Calculator/target/Calculator-0.0.1-SNAPSHOT.jar Calculator.jar
+COPY --from=build /CreditBank/Calculator/target/Calculator-0.0.1-SNAPSHOT.jar Calculator.jar
 
 EXPOSE 8080
 
