--- a/Deal/Dockerfile
+++ b/Deal/Dockerfile
@@ -1,9 +1,9 @@
 FROM maven:3.9.4-eclipse-temurin-21 AS build
 
-WORKDIR /app
+WORKDIR /CreditBank
 COPY ./pom.xml ./pom.xml
 
-WORKDIR /app/Deal
+WORKDIR /CreditBank/Deal
 
 COPY ./Deal/pom.xml ./pom.xml
 COPY ./Deal/src ./src
@@ -12,9 +12,9 @@ RUN mvn clean install
 
 FROM eclipse-temurin:21-jre AS runtime
 
-WORKDIR /app/Deal
+WORKDIR /CreditBank/Deal
 
-COPY --from=build /app/Deal/target/Deal-0.0.1-SNAPSHOT.jar Deal.jar
+COPY --from=build /CreditBank/Deal/target/Deal-0.0.1-SNAPSHOT.jar Deal.jar
 
 EXPOSE 8081
 
