--- a/Dossier/Dockerfile
+++ b/Dossier/Dockerfile
@@ -1,9 +1,9 @@
 FROM maven:3.9.4-eclipse-temurin-21 AS build
 
-WORKDIR /app
+WORKDIR /CreditBank
 COPY ./pom.xml ./pom.xml
 
-WORKDIR /app/Dossier
+WORKDIR /CreditBank/Dossier
 
 COPY ./Dossier/pom.xml ./pom.xml
 COPY ./Dossier/src ./src
@@ -12,9 +12,9 @@ RUN mvn clean install
 
 FROM eclipse-temurin:21-jre AS runtime
 
-WORKDIR /app/Dossier
+WORKDIR /CreditBank/Dossier
 
-COPY --from=build /app/Dossier/target/Dossier-0.0.1-SNAPSHOT.jar Dossier.jar
+COPY --from=build /CreditBank/Dossier/target/Dossier-0.0.1-SNAPSHOT.jar Dossier.jar
 
 EXPOSE 8082
 
