--- a/Gateway/Dockerfile
+++ b/Gateway/Dockerfile
@@ -1,9 +1,9 @@
 FROM maven:3.9.4-eclipse-temurin-21 AS build
 
-WORKDIR /app
+WORKDIR /CreditBank
 COPY ./pom.xml ./pom.xml
 
-WORKDIR /app/Gateway
+WORKDIR /CreditBank/Gateway
 
 COPY ./Gateway/pom.xml ./pom.xml
 COPY ./Gateway/src ./src
@@ -12,9 +12,9 @@ RUN mvn clean install
 
 FROM eclipse-temurin:21-jre AS runtime
 
-WORKDIR /app/Gateway
+WORKDIR /CreditBank/Gateway
 
-COPY --from=build /app/Gateway/target/Gateway-0.0.1-SNAPSHOT.jar Gateway.jar
+COPY --from=build /CreditBank/Gateway/target/Gateway-0.0.1-SNAPSHOT.jar Gateway.jar
 
 EXPOSE 8083
 
