--- a/Statement/Dockerfile
+++ b/Statement/Dockerfile
@@ -1,9 +1,9 @@
 FROM maven:3.9.4-eclipse-temurin-21 AS build
 
-WORKDIR /app
+WORKDIR /CreditBank
 COPY ./pom.xml ./pom.xml
 
-WORKDIR /app/Statement
+WORKDIR /CreditBank/Statement
 
 COPY ./Statement/pom.xml ./pom.xml
 COPY ./Statement/src ./src
@@ -12,9 +12,9 @@ RUN mvn clean install
 
 FROM eclipse-temurin:21-jre AS runtime
 
-WORKDIR /app/Statement
+WORKDIR /CreditBank/Statement
 
-COPY --from=build /app/Statement/target/Statement-0.0.1-SNAPSHOT.jar Statement.jar
+COPY --from=build /CreditBank/Statement/target/Statement-0.0.1-SNAPSHOT.jar Statement.jar
 
 EXPOSE 8084
 
